--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "mongoose": "^8.4.1",
     "morgan": "^1.10.0",
+    "mysql2": "^3.10.0",
     "nodemon": "^3.1.3"
   }
 }
