update in the yml file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,53 +1,44 @@
-name: CI/CD Pipeline
+name: CI
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     services:
       mysql:
         image: mysql:5.7
         ports:
-          - 3306:3306
+          - 3307:3306
         env:
-          MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
-          MYSQL_DATABASE: ${{ secrets.MYSQL_DATABASE }}
-        options: >-
-          --health-cmd="mysqladmin ping --silent"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=3
+          MYSQL_ROOT_PASSWORD: password
+          MYSQL_DATABASE: test_db
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: Create .env file
-      run: |
-        echo "MYSQL_HOST=127.0.0.1" >> .env
-        echo "MYSQL_USER=root" >> .env
-        echo "MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }}" >> .env
-        echo "MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }}" >> .env
+      - name: Run MySQL container
+        run: docker run -d --name mysql-container -p 3307:3306 -e MYSQL_ROOT_PASSWORD=password -e MYSQL_DATABASE=test_db mysql:5.7
 
-    - name: Wait for MySQL
-      run: sudo docker run --network host appropriate/curl sh -c "while ! curl --silent --fail mysql:3306; do sleep 1; done"
+      - name: Wait for MySQL
+        run: sleep 15 
 
-    - name: Run tests
-      run: npm test
+      - name: Run tests
+        run: npm test
+
+      - name: Stop MySQL container
+        run: docker stop mysql-container && docker rm mysql-container
