--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         run: npm install
 
       - name: Run MySQL container
-        run: docker run -d --name mysql-container -p 3308:3306 -e MYSQL_ROOT_PASSWORD=admin -e MYSQL_USER=root -e MYSQL_PASSWORD=admin -e MYSQL_DATABASE=practice mysql:5.7
+        run: docker run -d --name mysql-container -p 3307:3306 -e MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_PASSWORD }} -e MYSQL_DATABASE=${{ secrets.MYSQL_DATABASE }} mysql:5.7
 
       - name: Wait for MySQL
         run: sleep 15 
